<resources>
    <string name="app_name">FeedReader</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_now">Register Now</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Log In</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="full_name">Full Name</string>
    <string name="mobile_no">Mobile No.</string>
</resources>
